使用 Colaboratory 创建

--- a/365_DatascienceCNN.ipynb
+++ b/365_DatascienceCNN.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "365 DatascienceCNN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmJao9Y0jlpmd1VZLREt8g",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPX2V4tXc4LpJGSRh3Qqfpq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +65,7 @@
       "source": [
         "a = []\n",
         "while(True):\n",
-        "    a.append(1)"
+        "    a.append(2)"
       ]
     },
     {
